--- a/views/main-view.ejs
+++ b/views/main-view.ejs
@@ -39,7 +39,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center mb-4 text-primary">SaifAPI Documentation</h1>
+      <h1 class="text-center mb-4 text-primary">SaifAPI</h1>
       <p class="lead text-center mb-5">
         <b>SaifAPI</b> is a modular RESTful API providing authentication, posts,
         short URL, and subscription management services.<br />
@@ -304,21 +304,12 @@
           </table>
         </div>
       </div>
-      <div>
-        <h2>SaifURL Viewer</h2>
-        <p>
-          You can view short URLs service at
-          <a href="/v1/shorturls">Viewer page</a>
-        </p>
-      </div>
 
       <footer class="text-center mt-5">
         <hr />
         <p>
           <b>SaifAPI</b> &copy; <%= new Date().getFullYear() %> &mdash;
-          <a
-            href="https://github.com/saifabdelrazek011/saifauth"
-            target="_blank"
+          <a href="https://github.com/saifabdelrazek011/saifapi" target="_blank"
             >GitHub</a
           >
           &middot;
